# auto-reporter

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  state.json
.github/workflows/: ci.yml  weekly-report.yml
auto_reporter/: cli.py  config.py  http.py  models.py  state.py
auto_reporter/analysis/: __init__.py  blockers.py  correlate.py  stats.py
auto_reporter/collectors/: github.py  jira.py  synthetic.py
auto_reporter/deliver/: telegram.py
auto_reporter/narrate/: guard.py  llm.py  renderer.py
auto_reporter/narrate/prompts/: fallback.md.j2  report.md.j2
docs/superpowers/plans/: 2026-06-09-auto-reporter.md
docs/superpowers/specs/: 2026-06-09-auto-reporter-design.md
tests/: factories.py  test_blockers.py  test_cli.py  test_config.py  test_correlate.py  test_digest.py  test_github_collector.py  test_guard.py  test_http.py  test_jira_collector.py  test_llm.py  test_models.py  test_no_secret_leak.py  test_renderer.py  test_smoke.py  test_state.py  test_stats.py  test_synthetic.py  test_telegram.py
