[project]
name = "auto-reporter"
version = "0.1.0"
description = "Weekly multi-audience progress reports from GitHub + Jira activity"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typer>=0.12",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "ruff>=0.4"]

[project.scripts]
auto-reporter = "auto_reporter.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["auto_reporter*"]

[tool.setuptools.package-data]
"auto_reporter.narrate" = ["prompts/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
